--- a/configs/kitty/kitty.conf
+++ b/configs/kitty/kitty.conf
@@ -4,75 +4,77 @@
 #: https://sw.kovidgoyal.net/kitty/conf/
 
 # ----------------------------------------------------------------------------------
-#: Colors and Background -----------------------------------------------------------
+#: Colors and Background (gruvbox material) ----------------------------------------
 # ----------------------------------------------------------------------------------
 
 # The basic colors
-background              #1a2137
-foreground              #e7ebf6
-selection_background    #e7ebf6
-selection_foreground    #1a2137
+background #282828
+foreground #d4be98
+selection_background #d4be98
+selection_foreground #282828
 
 # Cursor colors
-cursor_text_color       #e7ebf6
-cursor                  #bcc6e3
+cursor #a89984
+cursor_text_color background
 
-# URL underline color when hovering with mouse
-url_color               #b39540
+tab_bar_background #282828
+active_tab_background #282828
+active_tab_foreground #d4be98
+active_tab_font_style bold
+inactive_tab_background #282828
+inactive_tab_foreground #a89984
+inactive_tab_font_style normal
 
-# Kitty window border colors
-active_border_color     #bcc6e3
-inactive_border_color   #586899
-bell_border_color       #cc5d4d
-
-# Tab bar colors
-active_tab_foreground   #e7ebf6
-active_tab_background   #1a2137
-inactive_tab_foreground #2e3859
-inactive_tab_background #bcc6e3
-tab_bar_background      #1a2137
-
-# Colors for marks (marked text in the terminal)
-mark1_foreground #e7ebf6
-mark1_background #e07565
-mark2_foreground #e7ebf6
-mark2_background #b39540
-mark3_foreground #e7ebf6
-mark3_background #5bae6f
 
 # The 16 terminal colors
 
-# black
-color0 #3F4451
-color8 #4F5666
+# Black
+color0 #665c54
+color8 #928374
 
-# red
-color1 #E06C75
-color9 #FF7B86
+# Red
+color1 #ea6962
+color9 #ea6962
 
-# green
-color2  #4d975f
-color10 #5bae6f
+# Green
+color2 #a9b665
+color10 #a9b665
 
-# yellow
-color3  #D19A66
-color11 #EFB074
+# Yellow
+color3 #e78a4e
+color11 #d8a657
 
-# blue
-color4  #5499D1
-color12 #61AFEF
+# Blue
+color4 #7daea3
+color12 #7daea3
 
-# magenta
-color5  #C678DD
-color13 #E48BFF
+# Magenta
+color5 #d3869b
+color13 #d3869b
 
-# cyan
-color6  #56B6C2
-color14 #63D4E0
+# Cyan
+color6 #89b482
+color14 #89b482
 
-# white
-color7  #bcc6e3
-color15 #f5f6fb
+# White
+color7 #d4be98
+color15 #d4be98
+
+# URL underline color when hovering with mouse
+# url_color               #b39540
+
+# Kitty window border colors
+active_border_color     #a9b665
+# inactive_border_color   #586899
+# bell_border_color       #cc5d4d
+
+# Colors for marks (marked text in the terminal)
+# mark1_foreground #e7ebf6
+# mark1_background #e07565
+# mark2_foreground #e7ebf6
+# mark2_background #b39540
+# mark3_foreground #e7ebf6
+# mark3_background #a9b665
 
 # window outer edge padding
 window_padding_width 4
@@ -225,5 +227,3 @@ map ctrl+alt+3 third_window
 map ctrl+alt+4 fourth_window
 
 #--------------------------------------------------------------------
-
-
