Correct multiple docker mods syntax for qbittorrent

--- a/hosts/supercluster/supercluster.yml
+++ b/hosts/supercluster/supercluster.yml
@@ -69,13 +69,12 @@ services:
       - no-new-privileges:true
     restart: unless-stopped
     network_mode: service:gluetun
-    DOCKER_MODS: ghcr.io/t-anc/gsp-qbittorent-gluetun-sync-port-mod:main
     environment:
       - PUID=${UID}
       - PGID=${GID}
       - TZ=${TIMEZONE}
       - WEBUI_PORT=8085
-      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest # optional custom web ui. Must enable alternate web ui in qbittorrent options and point file location to /vuetorrent 
+      - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest|ghcr.io/t-anc/gsp-qbittorent-gluetun-sync-port-mod:main # optional custom web ui. Must enable alternate web ui in qbittorrent options and point file location to /vuetorrent 
       - GSP_QBT_USERNAME=${GSP_QBT_USERNAME}
       - GSP_QBT_PASSWORD=${GSP_QBT_PASSWORD}
     volumes:
