--- a/hosts/supercluster/supercluster-pia.yml
+++ b/hosts/supercluster/supercluster-pia.yml
@@ -19,6 +19,7 @@ services:
       - net.ipv6.conf.all.disable_ipv6=1
       - net.ipv6.conf.lo.disable_ipv6=1
     environment:
+      - LOCAL_NETWORK=192.168.1.0/24
       - LOC=swiss
       - USER=${PIA_USER}
       - PASS=${PIA_PASSWORD}
@@ -30,7 +31,7 @@ services:
       - ./pia:/pia # Auth token is stored here
       - ./pia/shared:/pia-shared # If enabled, the forwarded port is dumped to /pia-shared/port.dat for potential use in other containers
     ports:
-      - 8085:8085/tcp # qbitorrent web ui
+      - 8080:8080 # qbitorrent web ui
       - 8989:8989 # sonarr web ui
       - 7878:7878 # radarr web ui
       - 9696:9696 # prowlarr web ui
@@ -43,7 +44,7 @@ services:
     security_opt:
       - no-new-privileges:true
     restart: unless-stopped
-   # network_mode: "service:vpn"
+    network_mode: "service:vpn"
     environment:
       - QBT_USERNAME:${QBT_USERNAME}
       - QBT_PASSWORD:${QBT_PASSWORD}
@@ -81,7 +82,7 @@ services:
       - PUID=${UID}
       - PGID=${GID}
       - TZ=${TIMEZONE}
-      - WEBUI_PORT=8085
+      - WEBUI_PORT=8080
       - DOCKER_MODS=ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest # optional custom web ui. Must enable alternate web ui in qbittorrent options and point file location to /vuetorrent 
     volumes:
       - ./qbittorrent/config:/config
