Update and rename .tmux.conf to tmux.conf

--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -1,4 +1,5 @@
-# ~/.tmux.conf
+# single user: ~/.tmux.conf
+# system-wide: /etc/tmux.conf
 
 # Plugins --------------------------------------------
 
