Minor formatting adjustment for visual clarity

--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -73,6 +73,10 @@ services:
     networks:
       navidrome_net:
 
+# -----------------------------------------------------------------
+# Audiobookshelf: https://www.audiobookshelf.org/docs/#docker-compose-install
+# -----------------------------------------------------------------
+
   audiobookshelf:
     image: ghcr.io/advplyr/audiobookshelf:${ABS_VERS:-latest}
     container_name: audiobookshelf
