--- a/hosts/galaxy/galaxy.yml
+++ b/hosts/galaxy/galaxy.yml
@@ -85,6 +85,7 @@ services:
     volumes:
       - ./navidrome/data:/data
       - ./navidrome/backups:/backups
+      - ./navidrome/backups/playlists:/backups/playlists
       - ${MUSIC_PATH}:/music:ro
     ports:
       - "4533:4533"
