Add new required HOMEPAGE_ALLOWED_HOSTS env variable

--- a/hosts/thebridge/thebridge.yml
+++ b/hosts/thebridge/thebridge.yml
@@ -10,6 +10,7 @@ services:
       - PUID=${UID}
       - PGID=${GID}
       - TZ=${TIMEZONE}
+      - HOMEPAGE_ALLOWED_HOSTS=${HOMEPAGE_DOMAIN}
     volumes:
       - ./homepage/config:/app/config
       - ./homepage/images:/app/public/images
